; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/misc/extr_vstusb.c_vstusb_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/misc/extr_vstusb.c_vstusb_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.vstusb_device = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_interface*, i32)* @vstusb_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vstusb_suspend(%struct.usb_interface* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.usb_interface*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.vstusb_device*, align 8
  %7 = alloca i32, align 4
  store %struct.usb_interface* %0, %struct.usb_interface** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.usb_interface*, %struct.usb_interface** %4, align 8
  %9 = call %struct.vstusb_device* @usb_get_intfdata(%struct.usb_interface* %8)
  store %struct.vstusb_device* %9, %struct.vstusb_device** %6, align 8
  %10 = load %struct.vstusb_device*, %struct.vstusb_device** %6, align 8
  %11 = icmp ne %struct.vstusb_device* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %30

13:                                               ; preds = %2
  %14 = load %struct.vstusb_device*, %struct.vstusb_device** %6, align 8
  %15 = getelementptr inbounds %struct.vstusb_device, %struct.vstusb_device* %14, i32 0, i32 0
  %16 = call i32 @mutex_lock(i32* %15)
  %17 = load %struct.vstusb_device*, %struct.vstusb_device** %6, align 8
  %18 = getelementptr inbounds %struct.vstusb_device, %struct.vstusb_device* %17, i32 0, i32 1
  %19 = call i32 @usb_wait_anchor_empty_timeout(i32* %18, i32 1000)
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %13
  %23 = load %struct.vstusb_device*, %struct.vstusb_device** %6, align 8
  %24 = getelementptr inbounds %struct.vstusb_device, %struct.vstusb_device* %23, i32 0, i32 1
  %25 = call i32 @usb_kill_anchored_urbs(i32* %24)
  br label %26

26:                                               ; preds = %22, %13
  %27 = load %struct.vstusb_device*, %struct.vstusb_device** %6, align 8
  %28 = getelementptr inbounds %struct.vstusb_device, %struct.vstusb_device* %27, i32 0, i32 0
  %29 = call i32 @mutex_unlock(i32* %28)
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %26, %12
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local %struct.vstusb_device* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @usb_wait_anchor_empty_timeout(i32*, i32) #1

declare dso_local i32 @usb_kill_anchored_urbs(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
